# MALFY_01

./: CMakeLists.txt  README.md
Source/: CustomCombo.cpp  CustomCombo.h  CustomSlider.cpp  CustomSlider.h  CustomTitle.cpp  CustomTitle.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Square.cpp  Square.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h
